@@ -1,16 +1,6 @@
 DIST Text-CSV_XS-0.23.tar.gz 16164 RMD160 3c11af82de160f25a1eb0d05017a64578df06be9 SHA1 cc7e45206f38f7e7cc73e09a1f0303368698bbb2 SHA256 b5b5fdb4908dc58835162b3145aa096eaa38cca8d2e611c37364822b8571c60f
+DIST Text-CSV_XS-0.25.tgz 22857 RMD160 bcb82712145185cc056f355be86844468354142e SHA1 60e208eaadb3eaeb68888a52b99b3efc2d87282e SHA256 746d6d20ce47c8647eb8e614f5d9bde6f2ae7593616d4da6a269db076955ce23
 EBUILD Text-CSV_XS-0.23-r1.ebuild 558 RMD160 0a57bff6afd19dcd8672025904bf1b77caad02d1 SHA1 dc6e79c34dc23433ce786a7b32696669194e6355 SHA256 cf48613e5208a73801a25a80a26bf738f12bfc7b3b7bc4a146288bf775685318
-MD5 0f5ec033ba92a9fe55aa1f72d92eeb50 Text-CSV_XS-0.23-r1.ebuild 558
-RMD160 0a57bff6afd19dcd8672025904bf1b77caad02d1 Text-CSV_XS-0.23-r1.ebuild 558
-SHA256 cf48613e5208a73801a25a80a26bf738f12bfc7b3b7bc4a146288bf775685318 Text-CSV_XS-0.23-r1.ebuild 558
-MISC ChangeLog 1763 RMD160 deaffa7cd0846d3f58bbbd23c93d20d31d2dd864 SHA1 59aca046a4e3f17b64d0b2ee67928990ae593a44 SHA256 88e9c0297a62d834d3d2a63be7801d50fc649c7d3ecfc72d5e58f75e5014aa2f
-MD5 bcc09e7e6013ee05ff29ced7d656ec97 ChangeLog 1763
-RMD160 deaffa7cd0846d3f58bbbd23c93d20d31d2dd864 ChangeLog 1763
-SHA256 88e9c0297a62d834d3d2a63be7801d50fc649c7d3ecfc72d5e58f75e5014aa2f ChangeLog 1763
+EBUILD Text-CSV_XS-0.25.ebuild 556 RMD160 b0406bcf6c6e5bd2cb036027793fea8ba23e8591 SHA1 3b2c68a414e9a14e6077e88a8ece857e19bc1cd6 SHA256 6fe56eac7c47152d7579ee93549f26024829510bec794d10795c7485bdb6ec65
+MISC ChangeLog 1895 RMD160 532e426623193dd956e1e5482c1175f7c1c59227 SHA1 2e66bb5b7c44406fcf5f9f54adba76b9bbf5078f SHA256 2cee1ab6d6ea88d54146f76f9648970d44caa64ae5c931412303da43028fc46e
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
-MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
-RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
-SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata.xml 305
-MD5 afe02b4074408ff8c4e7028e24c0adcd files/digest-Text-CSV_XS-0.23-r1 247
-RMD160 e9cda2bcdb972bc9f891139a78b1277e2ef945ed files/digest-Text-CSV_XS-0.23-r1 247
-SHA256 eb2f34aaccfb56df63efcb309a135657cb672d503505a0ce18f63f880723de83 files/digest-Text-CSV_XS-0.23-r1 247
