@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Text-CSV_XS
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.6 2007/01/19 16:56:18 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.7 2007/05/12 15:10:10 mcummings Exp $
+
+*Text-CSV_XS-0.25 (12 May 2007)
+
+  12 May 2007; Michael Cummings <mcummings@gentoo.org>
+  +Text-CSV_XS-0.25.ebuild:
+  Version bump
 
   19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   Text-CSV_XS-0.23-r1.ebuild:
